--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,12 +5,12 @@
     <title>Reddit OAuth Example</title>
 </head>
 <body>
-    <h1>Reddit OAuth Example</h1>
-    <p>
-        <a href="/login">Login with Reddit</a>
-    </p>
-    <p>
-        <a href="/my-posts">View My Posts</a>
-    </p>
+<h1>Reddit OAuth Example</h1>
+<p>
+    <a href="/oauth2/authorization/reddit">Login with Reddit</a>
+</p>
+<p>
+    <a href="/my-posts">View My Posts</a>
+</p>
 </body>
 </html>
